--- a/OnlineStore.com/test-output/old/Default suite/classes.html
+++ b/OnlineStore.com/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>automationFramework.Module_TC</td>
+<td>automationFramework.POM_TC</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
