--- a/OnlineStore.com/test-output/emailable-report.html
+++ b/OnlineStore.com/test-output/emailable-report.html
@@ -31,14 +31,32 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">31.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0</td><td class="numi">0.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">automationFramework.POM_TC</td><td><a href="#m1"><b>run</b>  </a></td><td class="numi">1</td><td>1494095106998</td><td class="numi">8413</td></tr>
+<tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">automationFramework.Module_TC</td><td><a href="#m1"><b>beforeTest</b>  </a></td><td class="numi">1</td><td>1494168047049</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Default test &#8212; skipped (configuration methods)</th></tr>
+<tr class="skippedodd"><td rowspan="1">automationFramework.Module_TC</td><td><a href="#m2"><b>afterTest</b>  </a></td><td class="numi">1</td><td>1494168047429</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Default test &#8212; skipped</th></tr>
+<tr class="skippedodd"><td rowspan="1">automationFramework.Module_TC</td><td><a href="#m3"><b>run</b>  </a></td><td class="numi">1</td><td>1494168047415</td><td class="numi">2</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">automationFramework.POM_TC:run</h2>
+<h2 id="m1">automationFramework.Module_TC:beforeTest</h2>
+<div style="padding-left:3em">
+<p>C:\QA_Selenium\charlotte\OnlineStore.com\src\test\java\TestData.xlsxTestData.xlsx (The system cannot find the file specified)</p>
+java.io.FileInputStream.open0(Native Method)
+<br/>at java.io.FileInputStream.open(Unknown Source)
+<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
+<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
+<br/>at utility.ExcelUtils.SetExcelFile(ExcelUtils.java:23)
+<br/>at automationFramework.Module_TC.beforeTest(Module_TC.java:28)
+<br/>23 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">automationFramework.Module_TC:afterTest</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">automationFramework.Module_TC:run</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
