--- a/OnlineStore.com/test-output/old/Default suite/methods-alphabetical.html
+++ b/OnlineStore.com/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c7ba">  <td>17/05/06 14:25:15</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;POM_TC.afterTest()[pri:0, instance:automationFramework.POM_TC@1794d431]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>17/05/06 14:24:45</td>   <td>-30083</td> <td>&nbsp;</td><td title="&gt;&gt;POM_TC.beforeTest()[pri:0, instance:automationFramework.POM_TC@1794d431]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>17/05/06 14:25:06</td>   <td>-8415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POM_TC.run()[pri:0, instance:automationFramework.POM_TC@1794d431]">run</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>17/05/07 10:40:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Module_TC.beforeTest()[pri:0, instance:automationFramework.Module_TC@6093dd95]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>17/05/07 10:40:47</td>   <td>362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module_TC.run()[pri:0, instance:automationFramework.Module_TC@6093dd95]">run</td> 
+  <td>main@517210187</td>   <td></td> </tr>
 </table>
