--- a/HomeDepot/test-output/old/Default suite/methods-alphabetical.html
+++ b/HomeDepot/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b7f67">  <td>17/05/08 21:43:14</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;POM_TC.afterTest()[pri:0, instance:automationFramework.POM_TC@3e6fa38a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1540011289</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/05/08 21:42:40</td>   <td>-33383</td> <td>&nbsp;</td><td title="&gt;&gt;POM_TC.beforeTest()[pri:0, instance:automationFramework.POM_TC@3e6fa38a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1540011289</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>17/05/08 21:42:54</td>   <td>-19511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POM_TC.run()[pri:0, instance:automationFramework.POM_TC@3e6fa38a]">run</td> 
-  <td>main@1540011289</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>17/05/09 19:53:24</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;POM_TC.afterTest()[pri:0, instance:automationFramework.POM_TC@42d80b78]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>17/05/09 19:53:05</td>   <td>-18810</td> <td>&nbsp;</td><td title="&gt;&gt;POM_TC.beforeTest()[pri:0, instance:automationFramework.POM_TC@42d80b78]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>17/05/09 19:53:20</td>   <td>-3597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POM_TC.run()[pri:0, instance:automationFramework.POM_TC@42d80b78]">run</td> 
+  <td>main@1225439493</td>   <td></td> </tr>
 </table>
